grammar.js
		document: $ => seq(
			repeat(
				choice(
					$.comment,
					$.import_header,
				),
			),
			choice(
				$.page_header,
				$.taglib_header,
			),
			repeat(
				seq(
					optional($.comment),
					choice(
						$.import_header,
						$.page_header,
						$.taglib_header,
					),
				),
			),
			repeat($._top_level_tag),
		),

		_top_level_tag: $ => choice(
			$._top_level_sp_tag,
			$.comment,
			$.html_doctype,
			// TODO: prec doesn't work here
			prec(3, $.html_void_tag),
			prec(2, $.html_tag),
			prec(1, $.html_option_tag),
			$.java_tag,
			$.script_tag,
			$.style_tag,
			$.xml_comment,
			$.xml_entity,
		),

		page_header: $ => seq(
			$.header_open,
			'page',
			$.language_attribute,
			$.pageEncoding_attribute,
			$.contentType_attribute,
			$.header_close,
		),

		taglib_header: $ => seq(
			$.header_open,
			'taglib',
			choice(
				$.uri_attribute,
				$.tagdir_attribute,
			),
			$.prefix_attribute,
			$.header_close,
		),

		header_open: $ => '<%@',
		header_close: $ => '%>',

		// sp tags

		expire_tag: $ => seq(
			$.expire_tag_open,
			repeat($.date_attribute),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.expire_tag_close,
				),
			),
		),
		expire_tag_open: $ => '<sp:expire',
		filter_tag: $ => seq(
			$.filter_tag_open,
			repeat(
				choice(
					$.collection_attribute,
					$.filter_attribute,
					$.format_attribute,
					$.from_attribute,
					$.ic_attribute,
					$.invert_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.mode_attribute,
					$.name_attribute,
					$.scope_attribute,
					$.to_attribute,
					$.type_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.filter_tag_close,
				),
			),
		),
		filter_tag_open: $ => '<sp:filter',
		linkedInformation_tag: $ => seq(
			$.linkedInformation_tag_open,
			repeat(
				choice(
					$.locale_attribute,
					$.name_attribute,
					$.type_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.linkedInformation_tag_close,
				),
			),
		),
		linkedInformation_tag_open: $ => '<sp:linkedInformation',
		linkedInformation_tag_close: $ => '</sp:linkedInformation>',

		log_tag: $ => seq(
			$.log_tag_open,
			repeat($.level_attribute),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.log_tag_close,
				),
			),
		),
		log_tag_open: $ => '<sp:log',
		log_tag_close: $ => '</sp:log>',

		print_tag: $ => seq(
			$.print_tag_open,
			repeat(
				choice(
					$.arg_attribute,
					$.condition_attribute,
					$.convert_attribute,
					$.cryptkey_attribute,
					$.dateformat_attribute,
					$.decimalformat_attribute,
					$.decoding_attribute,
					$.decrypt_attribute,
					$.default_attribute,
					$.encoding_attribute,
					$.encrypt_attribute,
					$.expression_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.text_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.print_tag_close,
				),
			),
		),
		print_tag_open: $ => '<sp:print',
		querytree_tag: $ => seq(
			$.querytree_tag_open,
			repeat(
				choice(
					$.attributes_attribute,
					$.item_attribute,
					$.name_attribute,
					$.query_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.querytree_tag_close,
				),
			),
		),
		querytree_tag_open: $ => '<sp:querytree',
		querytree_tag_close: $ => '</sp:querytree>',

		return_tag: $ => seq(
			$.return_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.default_attribute,
					$.expression_attribute,
					$.locale_attribute,
					$.object_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.return_tag_close,
				),
			),
		),
		return_tag_open: $ => '<sp:return',
		return_tag_close: $ => '</sp:return>',

		search_tag: $ => seq(
			$.search_tag_open,
			repeat(
				choice(
					$.name_attribute,
					$.time_attribute,
					$.type_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.search_tag_close,
				),
			),
		),
		search_tag_open: $ => '<sp:search',
		search_tag_close: $ => '</sp:search>',

		set_tag: $ => seq(
			$.set_tag_open,
			repeat(
				choice(
					$.condition_attribute,
					$.contentType_attribute,
					$.dateformat_attribute,
					$.decimalformat_attribute,
					$.default_attribute,
					$.expression_attribute,
					$.insert_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.object_attribute,
					$.overwrite_attribute,
					$.scope_attribute,
					$.tagScope_attribute,
					$.value_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.set_tag_close,
				),
			),
		),
		set_tag_open: $ => '<sp:set',
		set_tag_close: $ => '</sp:set>',

		textimage_tag: $ => seq(
			$.textimage_tag_open,
			repeat(
				choice(
					$.background_attribute,
					$.fontcolor_attribute,
					$.fontname_attribute,
					$.fontsize_attribute,
					$.fontstyle_attribute,
					$.gravity_attribute,
					$.height_attribute,
					$.locale_attribute,
					$.lookup_attribute,
					$.name_attribute,
					$.offset_attribute,
					$.processor_attribute,
					$.scope_attribute,
					$.text_attribute,
					$.transform_attribute,
					$.width_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		textimage_tag_open: $ => '<sp:textimage',

		upload_tag: $ => seq(
			$.upload_tag_open,
			repeat(
				choice(
					$.dynamic_attribute,
					$.dynamics_attribute,
					$.fixvalue_attribute,
					$.hidden_attribute,
					$.id_attribute,
					$.locale_attribute,
					$.name_attribute,
					$.personalization_attribute,
					$.type_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.upload_tag_close,
				),
			),
		),
		upload_tag_open: $ => '<sp:upload',
		warning_tag: $ => seq(
			$.warning_tag_open,
			repeat($.code_attribute),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.warning_tag_close,
				),
			),
		),
		warning_tag_open: $ => '<sp:warning',
		warning_tag_close: $ => '</sp:warning>',

		worklist_tag: $ => seq(
			$.worklist_tag_open,
			repeat(
				choice(
					$.element_attribute,
					$.name_attribute,
					$.role_attribute,
					$.type_attribute,
					$.user_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.worklist_tag_close,
				),
			),
		),
		worklist_tag_open: $ => '<sp:worklist',
		zip_tag: $ => seq(
			$.zip_tag_open,
			repeat(
				choice(
					$.directory_attribute,
					$.files_attribute,
					$.name_attribute,
					$.return_attribute,
				),
			),
			choice(
				$.self_closing_tag_end,
				seq(
					'>',
					repeat($._top_level_tag),
					$.zip_tag_close,
				),
			),
		),
		zip_tag_open: $ => '<sp:zip',
		zip_tag_close: $ => '</sp:zip>',

		self_closing_tag_end: $ => '/>',

		// spt tags

		spt_counter_tag: $ => seq(
			$.spt_counter_tag_open,
			repeat(
				choice(
					$.language_attribute,
					$.mode_attribute,
					$.name_attribute,
					$.varname_attribute,
				),
			),
			$.self_closing_tag_end,
		),
		spt_counter_tag_open: $ => '<spt:counter',

		attributes_attribute: $ => seq(
			'attributes',
			'=',
			$.string,
		),

		background_attribute: $ => seq(
			'background',
			'=',
			$.string,
		),

		code_attribute: $ => seq(
			'code',
			'=',
			$.string,
		),

		collection_attribute: $ => seq(
			'collection',
			'=',
			$.string,
		),

		condition_attribute: $ => seq(
			'condition',
			'=',
			$.condition_string,
		),

		contentType_attribute: $ => seq(
			'contentType',
			'=',
			$.string,
		),

		date_attribute: $ => seq(
			'date',
			'=',
			$.string,
		),

		default_attribute: $ => seq(
			'default',
			'=',
			$.string,
		),

		element_attribute: $ => seq(
			'element',
			'=',
			$.string,
		),

		files_attribute: $ => seq(
			'files',
			'=',
			$.string,
		),

		filter_attribute: $ => seq(
			'filter',
			'=',
			$.string,
		),

		fontcolor_attribute: $ => seq(
			'fontcolor',
			'=',
			$.string,
		),

		fontname_attribute: $ => seq(
			'fontname',
			'=',
			$.string,
		),

		fontsize_attribute: $ => seq(
			'fontsize',
			'=',
			$.string,
		),

		fontstyle_attribute: $ => seq(
			'fontstyle',
			'=',
			$.string,
		),

		gravity_attribute: $ => seq(
			'gravity',
			'=',
			$.string,
		),

		height_attribute: $ => seq(
			'height',
			'=',
			$.string,
		),

		id_attribute: $ => seq(
			'id',
			'=',
			$.string,
		),

		item_attribute: $ => seq(
			'item',
			'=',
			$.string,
		),

		language_attribute: $ => seq(
			'language',
			'=',
			$.string,
		),

		level_attribute: $ => seq(
			'level',
			'=',
			$.string,
		),

		locale_attribute: $ => seq(
			'locale',
			'=',
			$.string,
		),

		mode_attribute: $ => seq(
			'mode',
			'=',
			$.string,
		),

		name_attribute: $ => seq(
			'name',
			'=',
			$.object_string,
		),

		object_attribute: $ => seq(
			'object',
			'=',
			$.object_string,
		),

		offset_attribute: $ => seq(
			'offset',
			'=',
			$.string,
		),

		pageEncoding_attribute: $ => seq(
			'pageEncoding',
			'=',
			$.string,
		),

		prefix_attribute: $ => seq(
			'prefix',
			'=',
			$.string,
		),

		query_attribute: $ => seq(
			'query',
			'=',
			$.string,
		),

		return_attribute: $ => seq(
			'return',
			'=',
			$.string,
		),

		role_attribute: $ => seq(
			'role',
			'=',
			$.string,
		),

		scope_attribute: $ => seq(
			'scope',
			'=',
			$.string,
		),

		text_attribute: $ => seq(
			'text',
			'=',
			$.string,
		),

		time_attribute: $ => seq(
			'time',
			'=',
			$.string,
		),

		type_attribute: $ => seq(
			'type',
			'=',
			$.string,
		),

		uri_attribute: $ => seq(
			'uri',
			'=',
			$.string,
		),

		user_attribute: $ => seq(
			'user',
			'=',
			$.string,
		),

		width_attribute: $ => seq(
			'width',
			'=',
			$.string,
		),

		comment: $ => /<%--[^-]*-(?:(?:[^-]|-+[^-%]|-+%[^>])[^-]*-)*-+%>/,

		string: $ => seq(
			'"',
			repeat(
				choice(
					/[^"$!\}]+/,
					prec(1, $.interpolated_string),
					prec(2, $.interpolated_anchor),
					prec(3, '$'),
					prec(4, '!'),
				),
			),
			'"',
		),

		text: $ => /[^<>&\s]+(?:[^<>&]+[^<>&\s])?/,

		html_tag: $ => seq(
			$.html_tag_open,
			repeat($.dynamic_attribute),
			seq(
				'>',
				repeat($._top_level_tag),
				$.html_tag_close,
			),
		),
		// TODO: doesn't match a closing tag with its own name!
		html_tag_open: $ => /<\w+/,
		html_tag_close: $ => /<\/\w+>/,

		html_void_tag: $ => seq(
			$.html_void_tag_open,
			repeat($.dynamic_attribute),
			choice(
				'>',
				$.self_closing_tag_end,
			),
		),
		html_void_tag_open: $ => choice(
			'<area',
			'<base',
			'<br',
			'<col',
			'<embed',
			'<hr',
			'<img',
			'<input',
			'<link',
			'<meta',
			'<source',
			'<svg',
			'<track',
			'<wbr',
		),
