test/corpus/sp_filter.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:filter name="filteredList" collection="names" filter="?ar*" mode="simple"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (filter_tag
    (filter_tag_open)
    (name_attribute
      (string
        (string_content)))
    (collection_attribute
      (string
        (string_content)))
    (filter_attribute
      (string
        (string_content)))
    (mode_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
