test/corpus/sp_linkedInformation.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:linkedInformation name="sp_linkedInformation" locale="_locale" type="internal">some linked information</sp:linkedInformation>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (linkedInformation_tag
    (linkedInformation_tag_open)
    (name_attribute
      (string
        (string_content)))
    (locale_attribute
      (string
        (string_content)))
    (type_attribute
      (string
        (string_content)))
    (text)
    (linkedInformation_tag_close)))
