test/corpus/sp_querytree.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:querytree name="sp_querytree" query="objectType == 'news'" item="_item" attributes="system.attributes">
	I don't know what this tag does :)
</sp:querytree>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (querytree_tag
    (querytree_tag_open)
    (name_attribute
      (string
        (string_content)))
    (query_attribute
      (string
        (string_content)))
    (item_attribute
      (string
        (string_content)))
    (attributes_attribute
      (string
        (string_content)))
    (text)
    (querytree_tag_close)))
