test/corpus/sp_set.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:set name="_someVariable" object="_someObject" default="_someValue"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (set_tag
    (set_tag_open)
    (name_attribute
      (string
        (string_content)))
    (object_attribute
      (string
        (string_content)))
    (default_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))

================================================================================
tag body
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:set name="_someOtherVariable" scope="page">some <sp:print name="more"/> Text</sp:set>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (set_tag
    (set_tag_open)
    (name_attribute
      (string
        (string_content)))
    (scope_attribute
      (string
        (string_content)))
    (text)
    (print_tag
      (print_tag_open)
      (name_attribute
        (string
          (string_content)))
      (self_closing_tag_end))
    (text)
    (set_tag_close)))
