test/corpus/sp_textimage.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:textimage
		name="sp_textimage"
		scope="page"
		text="a text from ${name}"
		width="100"
		height="15"
		fontname="Arial"
		fontsize="12"
		fontstyle="bold"
		fontcolor="AAAAAA"
		background="000000"
		gravity="c"
		offset="2,5"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (textimage_tag
    (textimage_tag_open)
    (name_attribute
      (string
        (string_content)))
    (scope_attribute
      (string
        (string_content)))
    (text_attribute
      (string
        (string_content)))
    (width_attribute
      (string
        (string_content)))
    (height_attribute
      (string
        (string_content)))
    (fontname_attribute
      (string
        (string_content)))
    (fontsize_attribute
      (string
        (string_content)))
    (fontstyle_attribute
      (string
        (string_content)))
    (fontcolor_attribute
      (string
        (string_content)))
    (background_attribute
      (string
        (string_content)))
    (gravity_attribute
      (string
        (string_content)))
    (offset_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
