test/corpus/sp_upload.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:upload name="sp_logo2" type="image" id="logo_number_two"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (header_open)
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content)))
    (header_close))
  (taglib_header
    (header_open)
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content)))
    (header_close))
  (upload_tag
    (upload_tag_open)
    (name_attribute
      (string
        (string_content)))
    (type_attribute
      (string
        (string_content)))
    (id_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
