test/corpus/sp_worklist.txt
================================================================================
simple
================================================================================

<%@ page language="java" pageEncoding="UTF-8" contentType="text/html; charset=UTF-8"
%><%@ taglib uri="http://www.sitepark.com/taglibs/core" prefix="sp"
%>

<sp:worklist name="_worklist" type="content" role="_role" user="_user" element="_element"/>

--------------------------------------------------------------------------------

(document
  (page_header
    (language_attribute
      (string
        (string_content)))
    (pageEncoding_attribute
      (string
        (string_content)))
    (contentType_attribute
      (string
        (string_content))))
  (taglib_header
    (uri_attribute
      (string
        (string_content)))
    (prefix_attribute
      (string
        (string_content))))
  (worklist_tag
    (worklist_tag_open)
    (name_attribute
      (string
        (string_content)))
    (type_attribute
      (string
        (string_content)))
    (role_attribute
      (string
        (string_content)))
    (user_attribute
      (string
        (string_content)))
    (element_attribute
      (string
        (string_content)))
    (self_closing_tag_end)))
